2000-01-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c, lib/skip821address.c, transports/libta/ctlopen.c:
	    Have seen one mighty strange local non-delivery, and learned
	    ways to use quotes in addresses which are not always safe from
	    router to scheduler, and to TAs..

	* man/smtp.8, proto/smtp-tls.conf{,.in}, doc/guides/openssl,
	  configure.in, proto/Makefile.in, proto/scheduler.conf.in,
	  proto/post-install.sh.in:
	    - Updated 'smtp.8' man-page
	    - Updated OpenSSL GUIDE
	    - Updated the prototype of  smtp-tls.conf  (and renamed
	      it for autoconf reasons)
	    - Install the  smtp-tls.conf  prototype file (for post-install)
	    - Updated  post-install.sh
	    - Added example usage clause to scheduler.conf.in

	* transports/smtp/smtp.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c, transports/smtp/appendlet.c:
	    Reworked the timeout parametrizations somewhat
	    (per what a colleque of mine had asked for)

	* router/libdb/header.c, router/rfc822hdrs.c:
	    Remove the "Date" headers from specially recognized set.
	    Will end PARSING of the headers completely - it is an UA
	    problem, after all.
	    --> WHOOPS! Must fix also  router/rfc822hdrs.c !

	* scheduler/scheduler.c:
	    Properly analyze how many FDs each bidirectional TA
	    connection needs.  One or two.  Calculate the maximum
	    number of TA childs we can run.

	* scheduler/threads.c, scheduler/readconfig.c,
	  scheduler/scheduler.h, scheduler/transport.c:
	    Modified the process state algorithms a bit.
	    - Process will stay in STUFFING until it gets #hungry in
	      that state without that the thread has any 'nextfeed'
	      available.
	    - Only when there are no more things to feed in STUFFING state,
	      process moves to FINISHING state. ("retryat" processing being
	      sole exception.)
	    - A new vertex to a thread while there are active processes,
	      but 'nextfeed == NULL' will be placed into 'nextfeed'.